# rr_pi4B_driver

./: .clang-format  CMakeLists.txt  LICENSE  README.md
scripts/: test_pin.bash  tst_motor_simple.bash
src/: encoder.cpp  encoder.hpp  motor.cpp  motor.hpp  motor_controller.hpp  pid.cpp  pid.hpp  tst_common.hpp  tst_motor_cntl.cpp  tst_motor_ctl_pigpiod.cpp  tst_motor_enc.cpp  tst_pid.cpp
